feat: 基本完成对局、回合管理